--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -3,48 +3,21 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+*,
+html,
+body {
   margin: 0;
   padding: 0;
   border: 0;
+  outline: 0;
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol, ul {
+
+
+ul {
   list-style: none;
-}
-blockquote, q {
-  quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
 }
 
 /*
@@ -54,7 +27,7 @@ table {
 */
 
 body {
-  background: #042426;
+  background: #EBEBEB;
   color: #888;
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -69,79 +42,15 @@ body {
 *:before,
 *:after {
   -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
-.container,
-.grid,
+
 .work-ft {
   margin: 0 auto;
   width: 960px;
 }
-.container {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-.grid,
-.col-1-3,
-.col-2-3 {
-  padding-left: 15px;
-  padding-right: 20px;
-}
-.col-1-3,
-.col-2-3  {
-  display: inline-block;
-}
 
-.col-1-3 {
-  width: 33.33%;
-}
-.col-2-3 {
-  width: 66.66%;
-}
-
-
-/*
-  ========================================
-  Clearfix
-  ========================================
-*/
-
-.group:before,
-.group:after {
-  content: "";
-  display: table;
-}
-.group:after {
-  clear: both;
-}
-.group {
-  clear: both;
-  *zoom: 1;
-}
-
-/*
-  ==============
-  Rows
-  ==============
-*/
-
-.row, 
-.row-alt {
-  min-width: 960px;
-}
-.row {
-  background: #fff;
-  padding: 66px 0 44px 0;
-}
-
-.row-alt {
-  background: #cbe2c1
-  background: -webkit-linear-gradient(to right, #49081b, #1e030b);
-   background: -moz-linear-gradient(to right, #49081b, #1e030b);
-   background: linear-gradient(to right, #49081b, #1e030b);
-   padding: 44px 0 22px 0;;
-}
 
 /*
   ========================================
@@ -149,26 +58,40 @@ body {
   ========================================
 */
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   color: #9fb5b0;
+  padding: 10px;
+  margin: 10px;
 }
-h1, h3, h4, p {
-  margin-bottom: 22px;
+
+
+p {
+  margin: 10px;
+  padding: 10px;
 }
+
 h1 {
   font-size: 36px;
-  line-height: 44px;
+  line-height: 24px;
+  float: left;
 }
+
 h2 {
   font-size: 24px;
   line-height: 44px;
 }
+
 h3 {
   font-size: 21px;
 }
+
 h4 {
   font-size: 18px;
 }
+
 h5 {
   color: #a9b2b9;
   font-size: 14px;
@@ -181,25 +104,12 @@ h5 {
 strong {
   font-weight: 400;
 }
-cite, em {
+
+cite,
+em {
   font-style: italic;
 }
 
-
-/* 
-  ================
-  Leads
-  ================
-*/
-
-.lead {
-  text-align: center;
-}
-
-.lead p {
-  font-size: 21px;
-  line-height: 33px;
-}
 /*
   ========================================
   Links
@@ -210,6 +120,7 @@ a {
   color: #9fb5b0;
   text-decoration: none;
 }
+
 a:hover {
   color: #a9b2b9;
 }
@@ -220,44 +131,20 @@ p a {
 
 /*
   ========================================
-  Buttons
-  ========================================
-*/
-
-.btn {
-  border-radius: 5px;
-  display: inline-block;
-  margin: 0;
-  color: #fff;
-  cursor: pointer;
-  font-weight: 400;
-  letter-spacing: .5px;
-  text-transform: uppercase;
-}
-.btn-alt {
-  border: 1px solid #dfe2e5;
-  padding: 10px 30px;
-}
-.btn-alt {
-  background: #fff;
-  color: #9fb5b0;
-}
-
-/*
-  ========================================
   Primary header
   ========================================
 */
 
-.logo {
-  border-top: 4px solid #9fb5b0;
-  float: left;
-  font-size: 48px;
-  font-weight: 100;
-  letter-spacing: .5px;
-  line-height: 44px;
-  padding: 40px 0 22px 0;
-  text-transform: uppercase;
+header {
+  height: 70px;
+  margin: 0;
+  padding: 0;
+  background: #042426;
+}
+
+footer {
+  height: 6vh;
+  background: #042426;
 }
 
 
@@ -268,32 +155,6 @@ p a {
   text-transform: uppercase;
 }
 
-
-.primary-header a,
-.primary-footer a {
-  color: #fff;
-}
-
-.primary-header a:hover,
-.primary-footer a:hover {
-  color: #9fb5b0;
-}
-/*
-  ========================================
-  Primary footer
-  ========================================
-*/
-
-.primary-footer {
-  color: #9fb5b0;
-  font-size: 14px;
-  padding-bottom: 44px;
-  padding-top: 44px;
-}
-.primary-footer small {
-  float: left;
-  font-weight: 400;
-}
 
 /*
   ========================================
@@ -306,13 +167,12 @@ p a {
 }
 
 .nav li {
-  display: inline-block;
   margin: 0 10px;
-  vertical-align: top;
+  display: inline;
 }
 
 .nav li:last-child {
-  margin-right: 0;
+  margin-right: 10px;
 }
 
 /*
@@ -322,13 +182,16 @@ p a {
 */
 
 .social-links img {
-  height: 60px;
-  padding: 20px 0 0 15px;
-  float: right;
+  height: 2.5em;
+  padding: 10px 0 0 15px;
 }
 
 .social-links {
-  margin-left: 200px;
+  text-align: right;
+}
+
+#twitter {
+  margin-right: 10px;
 }
 
 
@@ -339,7 +202,7 @@ p a {
   ========================================
 */
 
-.about-me {
+.main {
   margin: 0 auto;
   width: 960px;
   padding-left: 15px;
@@ -348,14 +211,7 @@ p a {
   line-height: 28px;
 }
 
-}
-.teaser a:hover h3 {
-  color: #a9b2b9;
-}
 
-.teaser h3 {
-  text-transform: uppercase;
-}
 
 
 /*
@@ -364,35 +220,11 @@ p a {
   =================================
 */
 
-.skills {
-  margin: 0 auto;
-  width: 960px;
-  padding-left: 15px;
-  padding-right: 20px;
+#jigsaw {
+  margin: auto;
+  display: block;
 }
 
-
-.col2-1,
-.col2-2 {
-  display: inline-block;
-}
-
-.col2-1 {
-  width: 50%;
-}
-
-.col2-2 {
-  width: 50%;
-  padding-left: 80px;
-}
-
-.col2-1 img {
-  height: 440px;
-}
-
-.col2-2 img {
-  height: 530px;
-}
 
 /*
   ==================
@@ -418,6 +250,7 @@ td {
   padding-bottom: 8px;
   vertical-align: top;
 }
+
 th {
   padding-right: 45px;
   text-align: right;
@@ -428,13 +261,16 @@ td img {
   height: 20px;
 }
 
-thead {
-  line-height: 44px;
+td h4,
+td p {
+  padding: 0;
+  margin: 0;
 }
-thead th {
-  color: #648880;
-  font-size: 24px
+
+td p {
+  font-size: 0.8em;
 }
+
 
 tbody th {
   color: #a9b2b9;
@@ -442,19 +278,23 @@ tbody th {
   font-weight: 400;
   padding-top: 22px;
 }
+
 tbody td {
   border-top: 1px solid #dfe2e5;
   padding-top: 21px;
 }
+
 tbody td:first-of-type {
   padding-right: 15px;
   position: relative;
-  left: 25px;
+  left: 27px;
 }
+
 tbody td:last-of-type {
   padding-left: 40px;
   border-left: 1px solid #a9b2b9;
 }
+
 tbody td:only-of-type {
   padding-left: 0;
   padding-right: 0;
@@ -463,6 +303,7 @@ tbody td:only-of-type {
 table a {
   color: #888;
 }
+
 table h4 {
   margin-bottom: 0;
 }
@@ -472,59 +313,89 @@ table h4 {
   color: #7c0d2f;
 }
 
+date {
+  text-transform: uppercase;
+  font-size: 0.8em;
+}
+
 /*
   ==================
   Work
   ==================
 */
 
-.col3-1,
-.col3-2,
-.col3-3 {
-  padding-left: 44px;
-  padding-right: 44px;
+.work-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr, 3fr, 1fr, 3fr;
+  row-gap: 10px;
+  column-gap: 10px;
+  padding: 20px;
+
+}
+
+.work-grid img {
+  height: 200px;
+}
+
+.work-grid div {
+  display: flex;
+  flex-direction: column;
+}
+
+.work-grid h3 {
+  margin: 0;
+  padding: 0;
+}
+
+#ft {
+  grid-area: 1/1/2/2;
+}
+
+#ft1 {
+  grid-area: 2/1/3/2;
+}
+
+#ft2 {
+  grid-area: 2/2/3/3;
+}
+
+#ft3 {
+  grid-area: 2/3/3/4;
+}
+
+#und {
+  grid-area: 3/1/4/2;
+  padding-top: 2em;
+}
+
+#und1 {
+  grid-area: 4/1/5/2;
+}
+
+#und2 {
+  grid-area: 4/2/5/3;
 }
 
 
-.col3-1,
-.col3-2,
-.col3-3 {
-  display: inline-block;
-}
-
-.col3-1 {
-  width: 33.33%;
-}
-
-.col3-2 {
-  width: 33.33%;
-}
-
-.col3-3 {
-  width: 33.33%;
-}
-
-.col3-1 img,
-.col3-2 img,
-.col3-3 {
-  height: 600px;
-}
 
 
-.und-links,
+
+
+
+/*.und-links,
 .ft-links {
   padding: 22px 0;
   text-align: left;
 }
 
+
 .und-links img {
   height: 190px;
   margin: 22px 0 22px 0;
-  display: inline-block;
 }
 
 .ft-links img {
   height: 250px;
   margin: 22px 0 22px 0;
-  display: inline-block;
-}
+}*/
