--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -10,7 +10,7 @@ body {
   padding: 0;
   border: 0;
   outline: 0;
-  font-size: 100%;
+  font-size: 2em;
   font: inherit;
   vertical-align: baseline;
 }
@@ -70,27 +70,18 @@ p {
 }
 
 h1 {
-  font-size: 36px;
   line-height: 24px;
   float: left;
 }
 
 h2 {
-  font-size: 24px;
   line-height: 44px;
 }
 
-h3 {
-  font-size: 21px;
-}
 
-h4 {
-  font-size: 18px;
-}
 
 h5 {
   color: #a9b2b9;
-  font-size: 14px;
   font-weight: 400;
   margin-bottom: 10px;
   margin-top: 10px;
@@ -131,51 +122,19 @@ p a {
   ========================================
 */
 
-header {
-  height: 13vh;
-  margin: 0;
-  padding: 0;
-  background: #042426;
-}
-
 footer {
   height: 6vh;
-  background: #042426;
+  background: #042c2e;
 }
 
-
-.primary-nav {
-  font-size: 1.2em;
-  font-weight: 400;
-  letter-spacing: .5px;
-  text-transform: uppercase;
+footer .nav-link {
+  color: rgba(255, 255, 255, .5)
 }
 
-
-/*
-  ========================================
-  Navigation
-  ========================================
-*/
-
-.nav {
-  text-align: right;
+footer .nav-link:hover {
+  color: #a9b2b9;
 }
 
-.nav li {
-  margin-right: 10px;
-  margin-top: 10px;
-  display: inline-block;
-  padding: 5px
-}
-
-.nav li:hover {
-  background-color: #7c0d2f;
-}
-
-.nav li:last-child {
-  margin-right: 10px;
-}
 
 /*
   ===============
@@ -204,12 +163,12 @@ footer {
   ========================================
 */
 
-.main {
+.container-fluid {
+  height: 80vh;
   margin: 0 auto;
-  width: 960px;
   padding-left: 15px;
   padding-right: 20px;
-  font-size: 20px;
+  font-size: 1.2em;
   line-height: 28px;
 }
 
@@ -288,7 +247,7 @@ td p {
 
 tbody th {
   color: #a9b2b9;
-  font-size: 14 px;
+  font-size: 1.2em;
   font-weight: 400;
   padding-top: 22px;
 }
