--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -177,7 +177,12 @@ footer .nav-link:hover {
 }
 
 .container {
+  height: 80vh;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 20px;
   font-size: 1em;
+  line-height: 28px;
 }
 
 
@@ -244,7 +249,6 @@ td p {
   padding: 0;
   margin: 0;
 }
-
 
 
 tbody th {
