--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -204,13 +204,31 @@ footer .nav-link:hover {
 .jigsaw {
   grid-column: 1/2;
   height: 90vh;
-  display: block;
 
 }
 
 .jigsaw-view {
   grid-column: 2/3;
 }
+
+@media (max-width: 576px) {
+  .jigsaw {
+    display: none;
+  }
+
+  .jigsaw-mobile {
+    display: block
+  }
+
+}
+
+@media (min-width: 576px) {
+  .jigsaw-mobile {
+    display: none;
+  }
+
+}
+
 
 
 /*
