mobile skills text ul increase pad left

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -264,6 +264,10 @@ footer .nav-link:hover {
     color: #888
   }
 
+  .output-div ul {
+    padding-left: 10vw;
+  }
+
 }
 
 @media (min-width: 576px) {
