--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -251,7 +251,38 @@ footer .nav-link:hover {
   max-width: 120%;
 }
 
-@media (max-width: 960px) {
+@media (min-width: 720px) and (max-width: 960px) {
+  .jigsaw {
+    display: none;
+  }
+
+  .jigsaw-mobile {
+    display: block;
+    max-height: 70vh;
+
+  }
+
+  .skills-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: auto;
+    background-color: rgb(235, 235, 235);
+  }
+
+  #clickmore {
+    display: block;
+    margin-top: 2vh;
+    margin-bottom: 0;
+    color: #888
+  }
+
+  .output-div ul {
+    padding-left: 10vw;
+  }
+
+}
+
+@media (max-width: 720px) {
   .jigsaw {
     display: none;
   }
